--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     </title>
   </head>
   <body>
+    <div id="app"></div>
 
     <script src="jspm_packages/system.js"></script>
     <script src="config.js"></script>
